Added GPL licenses, added checks for ceramic bucket and the canteen, optimized tasks